--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.2.0",
+    "@nuxt/image": "^1.3.0",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/tailwindcss": "^6.11.2",
     "eslint": "^8.56.0",
     "nuxt": "^3.10.0",
+    "nuxt-svgo": "^4.0.0",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   }
