--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@nuxt/image": "^1.3.0",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/tailwindcss": "^6.11.2",
+    "@pinia/nuxt": "^0.5.1",
     "eslint": "^8.56.0",
     "nuxt": "^3.10.0",
     "nuxt-svgo": "^4.0.0",
+    "sass": "^1.70.0",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   }
