--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "devDependencies": {
     "@nuxt/eslint-config": "^0.2.0",
     "@nuxt/image": "^1.3.0",
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/tailwindcss": "^6.11.2",
     "@pinia/nuxt": "^0.5.1",
     "eslint": "^8.56.0",
     "nuxt": "^3.10.0",
+    "nuxt-lodash": "^2.5.3",
     "nuxt-svgo": "^4.0.0",
     "sass": "^1.70.0",
     "vue": "^3.4.15",
